syntax = "proto3";

package chat;
option go_package = "github.com/JMURv/e-commerce/api/pb/notification";

import "common/common.proto";

message EmptyResponse {}

service Notifications {
  rpc ListUserNotifications(ByUserIDRequest) returns (ListNotificationResponse);
  rpc CreateNotification(Notification) returns (Notification);
  rpc DeleteNotification(DeleteNotificationRequest) returns (EmptyResponse);
  rpc DeleteAllNotifications(ByUserIDRequest) returns (EmptyResponse);
}

message Notification {
  uint64 id = 1;
  string type = 2;
  uint64 user_id = 3;
  common.User user = 4;
  uint64 receiver_id = 5;
  common.User receiver = 6;
  string message = 7;
  uint64 created_at = 8;
}

message ByUserIDRequest {
  uint64 user_id = 1;
}

message ListNotificationResponse {
  repeated Notification notifications = 1;
}

message DeleteNotificationRequest {
  uint64 id = 1;
}