syntax = "proto3";

package main;

option go_package = "./proto";

service ReviewService {
  rpc GetReviewByID (GetReviewByIDRequest) returns (ReviewResponse) {}
  rpc CreateReview (CreateReviewRequest) returns (ReviewResponse) {}
  rpc UpdateReview (UpdateReviewRequest) returns (ReviewResponse) {}
  rpc DeleteReview (DeleteReviewRequest) returns (EmptyResponse) {}
}

message GetReviewByIDRequest {
  uint64 review_id = 1;
}

message CreateReviewRequest {
  uint64 user_id = 1;
  uint64 item_id = 2;
  uint64 reviewed_user_id = 3;
  string advantages = 4;
  string disadvantages = 5;
  string review_text = 6;
  uint32 rating = 7;
}

message UpdateReviewRequest {
  uint64 review_id = 1;
  uint64 user_id = 2;
  uint64 item_id = 3;
  uint64 reviewed_user_id = 4;
  string advantages = 5;
  string disadvantages = 6;
  string review_text = 7;
  uint32 rating = 8;
}

message DeleteReviewRequest {
  uint64 review_id = 1;
}

message ReviewResponse {
  uint64 review_id = 1;
  uint64 user_id = 2;
  uint64 item_id = 3;
  uint64 reviewed_user_id = 4;
  string advantages = 5;
  string disadvantages = 6;
  string review_text = 7;
  uint32 rating = 8;
}

message EmptyResponse {}